--- a/css/calculo-notas.css
+++ b/css/calculo-notas.css
@@ -23,9 +23,13 @@ input{
     border-top-width: 0px;
 }
 
+input.calculado{
+    border-bottom-style: solid;
+}
+
+
 .texto-explicacion{
     display: none;
-    font-size: 10px;
 }
 
 .texto-explicacion.explicacion-visible{
@@ -41,7 +45,7 @@ input{
     border-style: solid;
     border-color: yellow;
 
-    box-shadow: 0 0 5px #aaa;
+    box-shadow: 0 0 5px #050505;
 
 }
 
@@ -68,9 +72,6 @@ input{
     clear:both;
 }
 
-input.calculado{
-    border-bottom-style: solid;
-}
 
 .evaluacion{
     margin: 10px;
@@ -118,6 +119,12 @@ label{
 
 }
 
+.llave-expandible.llave-cerrada{
+    border-right-width: 2px;
+    border-right-color: black;
+    border-right-style: solid;
+}
+
 .colapsable{
     border-left-width: 2px;
     border-left-color: black;
@@ -145,10 +152,6 @@ label{
     float: right;
 
     box-shadow: 0 0 5px #aaa;
-
 }
 
-.oculto-por-llave{
-    display: none;
-}
 
