--- a/css/calculo-notas.css
+++ b/css/calculo-notas.css
@@ -106,6 +106,10 @@ label{
     text-overflow: ellipsis;
 }
 
+label.estrecho{
+    min-width: 90px;
+}
+
 .llave-expandible{
     
     padding: 5px;
