--- a/css/calculo-notas.css
+++ b/css/calculo-notas.css
@@ -210,5 +210,22 @@ label.estrecho{
 }
 
 .trabajo-por-crear *{
-    color: gray;
+    color: lightgray;
+}
+
+.quita-trabajo{
+    font-size: 8px;
+    background-color: yellow;
+}
+
+.trabajo-por-crear .quita-trabajo{
+    visibility: hidden;
+}
+
+.trabajo-por-crear input{
+    border-bottom-color: lightgray;
+}
+
+.quita-trabajo:hover{
+   box-shadow:0px 0px 3px 3px #aaa;
 }
