--- a/css/calculo-notas.css
+++ b/css/calculo-notas.css
@@ -180,6 +180,9 @@ label.estrecho{
 }
 
 .colapsable{
+    
+    
+    
     border-left-width: 2px;
     border-left-color: black;
     border-left-style: solid;
@@ -207,6 +210,7 @@ label.estrecho{
     box-shadow: 0 0 5px #aaa;
     
     z-index:10;
+    
 }
 
 .trabajo-por-crear *{
@@ -228,4 +232,9 @@ label.estrecho{
 
 .quita-trabajo:hover{
    box-shadow:0px 0px 3px 3px #aaa;
+}
+
+
+div.calculo-modulo > div:last-of-type div.recuperacion{
+    visibility: hidden;
 }
